<resources>
    <string name="app_name">atividade2</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="remember_password">Remember Password</string>
    <string name="sign_in">Sign in</string>
    <string name="forget_password">Forget Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="phone">Phone</string>
    <string name="e_mail">E-mail</string>
    <string name="allow_term_and_conditions">Allow Term And Conditions</string>
    <string name="sign_in">Sign in</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</string>
    <string name="atomo">Atomo</string>
    <string name="tomo">Átomo</string>
    <string name="movendo_descobertas">Movendo descobertas</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in_with_social_media">Sign in with Social Media</string>
</resources>