<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sky"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".inicio">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/welcome_back"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="75dp"
            android:paddingRight="75dp"
            android:text="@string/lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="11sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:src="@drawable/atomo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/serif_regular"
            android:paddingTop="10dp"
            android:text="@string/tomo"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/serif_regular"
            android:paddingTop="5dp"
            android:text="@string/movendo_descobertas"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:background="@drawable/btn_borda_redonda"
            android:text="@string/sign_in"
            android:textAllCaps="false" />

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_borda_redonda"
            android:text="@string/sign_up"
            android:textAllCaps="false" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/sign_in_with_social_media"
            android:textAlignment="center"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:paddingRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:src="@drawable/facebook" />

            <ImageView
                android:paddingRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:src="@drawable/twitter" />

            <ImageView
                android:paddingRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:src="@drawable/linkedin" />


        </LinearLayout>


    </LinearLayout>
</LinearLayout>